--- a/lambregs_ximera/ae_constante_kracht.tex
+++ b/lambregs_ximera/ae_constante_kracht.tex
@@ -12,12 +12,12 @@
 
 	%% \chapter{Arbeid \& Energie}
 
-	In essentie hebben we met de wetten van Newton, de formule voor o.a. de gravitatiekracht en de kinematica voldoende om alle mechanische verschijnselen te beschrijven. Je zou dus kunnen zeggen dat we geen bijkomende elementen nodig hebben. Maar wat met het begrip energie, een fundamentele grootheid in de fysica en vaak handig bij het oplossen van probleemstellingen?  Willen we dit begrip in de mechanica gebruiken, dan zullen we het moeten defini\"eren aan de hand van begrippen die we al hebben -- zoals kracht. De wetten van Newton vormen immers het fundament van de mechanica -- alles moet hierop gestoeld zijn. 
+	In essentie hebben we met de wetten van Newton, de formule voor o.a. de gravitatiekracht en de kinematica voldoende om alle mechanische verschijnselen te beschrijven. Je zou dus kunnen zeggen dat we geen bijkomende elementen nodig hebben. Maar wat met het begrip energie, een fundamentele grootheid in de fysica en vaak handig bij het oplossen van probleemstellingen?  Willen we dit begrip in de mechanica gebruiken, dan zullen we het moeten definiëren aan de hand van begrippen die we al hebben -- zoals kracht. De wetten van Newton vormen immers het fundament van de mechanica -- alles moet hierop gestoeld zijn. 
 	
 	Je leerde ooit iets over energie: \textit{een lichaam bezit energie als het de mogelijkheid heeft om arbeid te verrichten.} Zo bezit een bewegende hamer \textit{kinetische energie} omdat hij als gevolg van zijn beweging arbeid kan verrichten: hij kan een nagel in de muur drijven. De opgewonden veer
-	van een mechanisch horloge is een voorbeeld van \textit{potenti\"ele energie}. Als gevolg van de spanningstoestand van de veer -- die door een bepaalde plaats wordt gekarakteriseerd -- kan de veer arbeid verrichten: terwijl de veer zich geleidelijk ontspant, verricht ze arbeid door de wijzers te laten ronddraaien. %De veer verkreeg zijn potenti\"ele energie doordat degene die het horloge opwond er arbeid op leverde.
+	van een mechanisch horloge is een voorbeeld van \textit{potentiële energie}. Als gevolg van de spanningstoestand van de veer -- die door een bepaalde plaats wordt gekarakteriseerd -- kan de veer arbeid verrichten: terwijl de veer zich geleidelijk ontspant, verricht ze arbeid door de wijzers te laten ronddraaien. %De veer verkreeg zijn potentiële energie doordat degene die het horloge opwond er arbeid op leverde.
 	
-	Ook in de omgangstaal kennen we de termen arbeid en energie. Je mag echter niet vergeten dat deze hier een bredere betekenis dragen dan degene die we binnen de fysica voor ogen hebben. Zo moet de \textit{kwalitatieve} omschrijving van de mogelijkheid om arbeid te verrichten, vervangen worden door een \textit{kwantitatieve}; we willen weten \textit{hoeveel} arbeid er geleverd wordt, of \textit{hoeveel} energie een bepaald lichaam bezit. Als we bovendien zeggen dat energie de mogelijkheid is om arbeid te leveren, dan moeten we in eerste instantie het begrip arbeid \textit{defini\"eren}. We gebruiken hiervoor o.a. het begrip kracht. Aan de hand van het begrip arbeid, kunnen we dan vervolgens het begrip energie defini\"eren.
+	Ook in de omgangstaal kennen we de termen arbeid en energie. Je mag echter niet vergeten dat deze hier een bredere betekenis dragen dan degene die we binnen de fysica voor ogen hebben. Zo moet de \textit{kwalitatieve} omschrijving van de mogelijkheid om arbeid te verrichten, vervangen worden door een \textit{kwantitatieve}; we willen weten \textit{hoeveel} arbeid er geleverd wordt, of \textit{hoeveel} energie een bepaald lichaam bezit. Als we bovendien zeggen dat energie de mogelijkheid is om arbeid te leveren, dan moeten we in eerste instantie het begrip arbeid \textit{definiëren}. We gebruiken hiervoor o.a. het begrip kracht. Aan de hand van het begrip arbeid, kunnen we dan vervolgens het begrip energie definiëren.
 	
 	
 	\end{document}
