--- a/lambregs_ximera/ae_theorema.tex
+++ b/lambregs_ximera/ae_theorema.tex
@@ -22,7 +22,7 @@
 	\end{eqnarray}
 	waarin $m$ de massa van het voorwerp is en $v_a$ en $v_b$ de snelheden van het voorwerp op respectievelijk het begin- en het eindpunt.
 	
-	In het rechterlid verschijnt een grootheid die we \textit{defini\"eren} als de \mbox{\textit{kinetische energie}} van het voorwerp:
+	In het rechterlid verschijnt een grootheid die we \textit{definiëren} als de \mbox{\textit{kinetische energie}} van het voorwerp:
 	\begin{eqnarray}
 	E_k&=&\frac{mv^2}{2}\nonumber
 	\end{eqnarray}
@@ -89,7 +89,7 @@
 	\phantom{}\hfill$\blacksquare$
 	
 	\begin{exercise}(arbeid-energie theorema)
-	Een horizontaal liggende veer op tafel heeft een veerconstante $k=360\rm\,N/m$ en wordt $11,0\rm\,cm$ ingedrukt. Een blok van $1,85\rm\,kg$ wordt tegen de gespannen veer gelegd en losgelaten. De wrijvingsco\"effici\"ent tussen het blok en de tafel is $0,38$.
+	Een horizontaal liggende veer op tafel heeft een veerconstante $k=360\rm\,N/m$ en wordt $11,0\rm\,cm$ ingedrukt. Een blok van $1,85\rm\,kg$ wordt tegen de gespannen veer gelegd en losgelaten. De wrijvingscoöefficiënt tussen het blok en de tafel is $0,38$.
 	\begin{enumerate}
 	\item Hoeveel arbeid levert de veerkracht vanaf de ingedrukte toestand tot in zijn evenwichtstoestand?
 	\item Hoeveel arbeid levert de wrijvingskracht over hetzelfde traject?
