--- a/lambregs_ximera/grvt_universele_gravitatiekracht.tex
+++ b/lambregs_ximera/grvt_universele_gravitatiekracht.tex
@@ -42,7 +42,7 @@
 	\begin{eqnarray}
 	F&=&G\frac{mm'}{r^2}
 	\end{eqnarray}
-	De evenredigheidsco\"effici\"ent $G$ wordt de
+	De evenredigheidscoöefficiënt $G$ wordt de
 	\textit{gravitatieconstante} genoemd.
 	\begin{eqnarray}\nonumber
 	G&=&6,67\cdot10^{-11}\rm\,\frac{Nm^2}{kg^2}
