--- a/lambregs_ximera/hrmn_harmonische_oscillator.tex
+++ b/lambregs_ximera/hrmn_harmonische_oscillator.tex
@@ -25,14 +25,14 @@
 	
 	%%%\section{De harmonische oscillator}
 	
-	Als eerste voorbeeld behandelen we een eenvoudig mechanisch systeem: een massa die aan een veer is bevestigd. We noemen dit een massa-veersysteem. En zoals we al zo vaak hebben gedaan, beschouwen we een model waar geen wrijving aanwezig is. Laten we bovendien de veer een horizontale ori\"entatie geven zodat we ook de zwaartekracht buiten beschouwing kunnen laten.
+	Als eerste voorbeeld behandelen we een eenvoudig mechanisch systeem: een massa die aan een veer is bevestigd. We noemen dit een massa-veersysteem. En zoals we al zo vaak hebben gedaan, beschouwen we een model waar geen wrijving aanwezig is. Laten we bovendien de veer een horizontale oriëntatie geven zodat we ook de zwaartekracht buiten beschouwing kunnen laten.
 	\begin{image}
 	
 	\includegraphics[width=0.8\textwidth]{kogeltegenveer2}
 	\end{image}
 	Wanneer we de massa uit de positie halen waar de veer zijn rustlengte heeft en hem vervolgens loslaten, voert de massa een trilling uit. We constateren dat hij heen en weer beweegt waarbij hij steeds door de evenwichtspositie gaat. Deze beweging willen we natuurlijk uit onze natuurwetten tevoorschijn zien komen. Meer bepaald moet de tweede wet van Newton -- ons beginsel der beginselen in de klassieke mechanica -- de beweging opleveren. De trilling is een mechanisch verschijnsel en moet dus te verklaren zijn met behulp van die natuurwetten. 
 	
-	Om de beweging te kunnen vinden, moeten we het systeem vrij maken -- alle krachten erop tekenen. We hebben dus de resulterende kracht nodig. Omdat het lichaam op een ondergrond rust en geen verticale versnelling heeft, heffen de normaalkracht en de zwaartekracht elkaar op. De resulterende kracht is bijgevolg de veerkracht. We gebruiken de wet van Hooke en gieten de component van de kracht volgens de bewegingsrichting in de vorm zoals we ze al kennen:\footnote{Deze beschrijving van de veerkracht is natuurlijk een benadering. Ze is maar geldig voor zolang de veer een niet te grote uitwijking kent. Het minteken zorgt voor een terugroepkracht; wanneer de co\"ordinaat $x$ positief is, is de component van de kracht negatief en wanneer de co\"ordinaat negatief is, is de component positief.}
+	Om de beweging te kunnen vinden, moeten we het systeem vrij maken -- alle krachten erop tekenen. We hebben dus de resulterende kracht nodig. Omdat het lichaam op een ondergrond rust en geen verticale versnelling heeft, heffen de normaalkracht en de zwaartekracht elkaar op. De resulterende kracht is bijgevolg de veerkracht. We gebruiken de wet van Hooke en gieten de component van de kracht volgens de bewegingsrichting in de vorm zoals we ze al kennen:\footnote{Deze beschrijving van de veerkracht is natuurlijk een benadering. Ze is maar geldig voor zolang de veer een niet te grote uitwijking kent. Het minteken zorgt voor een terugroepkracht; wanneer de coördinaat $x$ positief is, is de component van de kracht negatief en wanneer de coördinaat negatief is, is de component positief.}
 	\begin{eqnarray*}
 	F(x)=-kx
 	\end{eqnarray*}
@@ -44,7 +44,7 @@
 	&\Updownarrow&\nonumber\\
 	\frac{d^2x}{dt^2}+\frac{k}{m}x&=&0
 	\end{eqnarray}
-	\ldots\,en toen kwamen we uit bij een \ldots\,\emph{differentiaalvergelijking}. Om meer precies te zijn: een tweede-orde lineaire differentiaalvergelijking met constante co\"effici\"enten. Dat klinkt redelijk ingewikkeld. In feite is het ook niet zo simpel. We zijn opzoek naar de beweging, wat betekent dat we de positie $x$ in functie van de tijd willen vinden -- de functie $x(t)$ dus. De vergelijking die we gevonden hebben is niet zozeer een algebra\"ische vergelijking in een onbekende variabele $x$ (zoals bijvoorbeeld een tweedegraadsvergelijking) dan wel \emph{een vergelijking voor een functie}!\footnote{Wanneer we de impliciete afhankelijkheid van de tijd expliciet aangeven,ziet de vergelijking er als volgt uit
+	\ldots\,en toen kwamen we uit bij een \ldots\,\emph{differentiaalvergelijking}. Om meer precies te zijn: een tweede-orde lineaire differentiaalvergelijking met constante coöefficiënten. Dat klinkt redelijk ingewikkeld. In feite is het ook niet zo simpel. We zijn opzoek naar de beweging, wat betekent dat we de positie $x$ in functie van de tijd willen vinden -- de functie $x(t)$ dus. De vergelijking die we gevonden hebben is niet zozeer een algebra\"ische vergelijking in een onbekende variabele $x$ (zoals bijvoorbeeld een tweedegraadsvergelijking) dan wel \emph{een vergelijking voor een functie}!\footnote{Wanneer we de impliciete afhankelijkheid van de tijd expliciet aangeven,ziet de vergelijking er als volgt uit
 	\begin{eqnarray*}
 	\frac{d^2x(t)}{dt^2}+\frac{k}{m}x(t)=0
 	\end{eqnarray*}} We zoeken dus een functie die aan de vergelijking voldoet. Een functie die voldoet is dan een oplossing van de vergelijking en dus een mogelijke beweging die de massa kan volgen. We spreken hier in eerste instantie over \emph{een} oplossing omdat er a priori\footnote{Vooraf beschouwd. Zonder het gezien, ervaren of onderzocht te hebben.} verschillende oplossingen kunnen zijn.
@@ -73,7 +73,7 @@
 	&\Updownarrow&\nonumber\\
 	x(t)=A\sin(\omega t+\varphi)\quad&\mathrm{met}&\quad\omega=\sqrt{\frac{k}{m}}
 	\end{eqnarray}
-	We hebben nu de wiskundige oplossing van de differentiaalvergelijking gevonden. De massa trilt sinuso\"idaal in de tijd. Vandaar dat we over een harmonische trilling spreken.
+	We hebben nu de wiskundige oplossing van de differentiaalvergelijking gevonden. De massa trilt sinusoöidaal in de tijd. Vandaar dat we over een harmonische trilling spreken.
 	
 	De verschillende parameters die in de oplossing (\ref{opl_diffvgl_ht}) voorkomen, willen we fysisch kunnen interpreteren. We willen hun betekenis kennen. Het gemakkelijkste is misschien terug te grijpen naar de algemene sinusfunctie. Daar stond de parameter $a$ voor de amplitude. Dat is dus hier voor $A$ niet anders; $A$ stelt de amplitude van de trilling voor. Voor de parameter $b$ hebben we de gelijkheid $b=\frac{2\pi}{p}$ waarin $p$ de periode van de functie is. Omdat onze onafhankelijke variabele de tijd is, is de fysische interpretatie van $p$ de tijd van \'e\'en cyclus -- waarvoor we het symbool $T$ gebruiken. 
 	\begin{image}
@@ -135,7 +135,7 @@
 	%\includegraphics[width=.7\textwidth]{EpEkE}
 	\includegraphics[width=.9\textwidth]{ht_behoud_energie}
 	\end{image}
-	Merk op dat de energie van een trilling recht evenredig is met het kwadraat van de amplitude. Een golf in de zee die dus twee keer zo hoog is, draagt vier keer zoveel energie met zich mee. In de figuur zie je mooi hoe de kinetische en de potenti\"ele energie in elkaar worden omgezet; het verlies van de ene is de winst van de andere. Let op het verschil tussen de periode van de energievormen en de periode van de eigenlijke trilling \ldots
+	Merk op dat de energie van een trilling recht evenredig is met het kwadraat van de amplitude. Een golf in de zee die dus twee keer zo hoog is, draagt vier keer zoveel energie met zich mee. In de figuur zie je mooi hoe de kinetische en de potentiële energie in elkaar worden omgezet; het verlies van de ene is de winst van de andere. Let op het verschil tussen de periode van de energievormen en de periode van de eigenlijke trilling \ldots
 	
 	%%%\newpage
 	
