--- a/lambregs_ximera/knmtc_1dim_EVRB.tex
+++ b/lambregs_ximera/knmtc_1dim_EVRB.tex
@@ -12,7 +12,7 @@
 
 	%%%\section*{C Eenparig veranderlijke rechtlijnige beweging}
 
-	Een beweging waarvan de versnelling constant is, noemen we een \textit{eenparig veranderlijke rechtlijnige be\-we\-ging}, afgekort EVRB. Eenparig betekent gelijkmatig; de snelheidsverandering is steeds gelijk. In symbolen geldt dus dat $a(t)=a$ waarbij het maatgetal van $a$ een re\"eel getal is. We werken voor dit model de plaatsfunctie en de snelheidsfunctie uit. M.a.w. willen we het verloop van de plaats en de snelheid in functie van de tijd kennen. 
+	Een beweging waarvan de versnelling constant is, noemen we een \textit{eenparig veranderlijke rechtlijnige be\-we\-ging}, afgekort EVRB. Eenparig betekent gelijkmatig; de snelheidsverandering is steeds gelijk. In symbolen geldt dus dat $a(t)=a$ waarbij het maatgetal van $a$ een reëel getal is. We werken voor dit model de plaatsfunctie en de snelheidsfunctie uit. M.a.w. willen we het verloop van de plaats en de snelheid in functie van de tijd kennen. 
 	
 	Aangezien de versnelling constant is en de versnelling de afgeleide van de snelheid, moet de snelheid in functie van de tijd een lineaire functie (in de tijd) zijn.\footnote{Strikt genomen zien we hier iets over het hoofd. A priori zou het immers kunnen dat er nog andere functies dan lineaire functies zijn waarvoor de afgeleide een constante functie is. Dat is echter niet het geval. Het bewijs hiervan zie je later dit jaar in het vak wiskunde. Je bewijst dat alle mogelijke functies die in aanmerking komen slechts op een constante na aan elkaar gelijk zijn.} Nu dat we het snelheidsverloop kennen, kunnen we het verloop van de plaats afleiden. Aangezien de snelheid een lineaire functie is en de snelheid de afgeleide van de positie is, moet de positie een kwadratische functie (in de tijd) zijn. De afgeleide van een kwadratische functie is immers een lineaire functie.\footnote{Hier geldt een gelijkaardige opmerking als die in de vorige voetnoot.}
 	
