--- a/lambregs_ximera/knmtc_1dim_verticale_worp.tex
+++ b/lambregs_ximera/knmtc_1dim_verticale_worp.tex
@@ -16,10 +16,10 @@
 	
 	\includegraphics[width=0.85\textwidth]{valbeweging_pasco2}
 	\end{image}
-	\captionof{figure}{Experimenteel bekomen grafieken van een verticale worp waarbij de as naar beneden is geori\"enteerd.}
+	\captionof{figure}{Experimenteel bekomen grafieken van een verticale worp waarbij de as naar beneden is georiënteerd.}
 	Strikt genomen verschilt de valversnelling van plaats tot plaats op de aarde, maar voor het gemak nemen wij in vraagstukken de waarde
 	\[g=9,81\rm\,m/s^2.\]
-	Omdat de verticale worp een EVRB is, kunnen we de formules (\ref{x(t)0}) en (\ref{v(t)0}) gebruiken om een valbeweging te beschrijven. Voor de versnelling $a$ nemen we dan $a=g$ of $a=-g$ al naargelang de ori\"entatie van de co\"ordinaatas.
+	Omdat de verticale worp een EVRB is, kunnen we de formules (\ref{x(t)0}) en (\ref{v(t)0}) gebruiken om een valbeweging te beschrijven. Voor de versnelling $a$ nemen we dan $a=g$ of $a=-g$ al naargelang de oriëntatie van de coördinaatas.
 	
 	\clearpage
 	%%\newpage
