--- a/lambregs_ximera/nwtn_historische_uitwijding.tex
+++ b/lambregs_ximera/nwtn_historische_uitwijding.tex
@@ -15,7 +15,7 @@
 	%%%\section*{Dialogo sopra i due massimi sistemi del mondo}
 
 	Galileo schreef in 1632 een dialoog waarin hij de juistheid van het copernicaanse wereldbeeld fysisch probeerde te bewijzen door middel van de socratische methode\footnote{Van Dale: waarbij men de denkbeelden uit de geest van de leerling zelf ontwikkelt, terwijl men hem door gepaste vragen allengs zo ver brengt, dat hij het begrip, dat men hem duidelijk wil maken, zelf vindt.}. Een van de tegenargumenten was dat een vallende steen niet volgens een loodlijn op het aardoppervlak zou neerkomen, wanneer de aarde zelf een rotatie uitvoerde.\footnote{De aarde zou immers onder de steen wegdraaien.} Galileo haalde dit argument onderuit door gebruik te maken van het traagheidsbeginsel (anderen hadden dit ook geprobeerd via een 'slepende invloed' van de lucht, maar Galileo zag in dat dat niet voldoende was en erkent de ware fysische grondslag).
-	De dialoog gaat tussen drie geleerden. Sagredo is de vriend van een niet nader genoemd auteur (Galileo), die zijn gesprekspartners inlicht over diens nieuwe theori\"en. Salviati is de onbevooroordeelde geleerde die vooral zijn gezond verstand gebruikt, en dus de positie van de lezer verbeeldt. Simplicio is de wat simplistische schoolgeleerde (scholasticus), die het standpunt van Aristoteles weergeeft.
+	De dialoog gaat tussen drie geleerden. Sagredo is de vriend van een niet nader genoemd auteur (Galileo), die zijn gesprekspartners inlicht over diens nieuwe theoriën. Salviati is de onbevooroordeelde geleerde die vooral zijn gezond verstand gebruikt, en dus de positie van de lezer verbeeldt. Simplicio is de wat simplistische schoolgeleerde (scholasticus), die het standpunt van Aristoteles weergeeft.
 	%%%%\newline
 	%%%%\newline
 	Hier een fragment uit deze dialoog.
@@ -83,7 +83,7 @@
 	%%%\newline
 	%%%\newline
 	Hier een fragment uit Descartes' natuurkundeleerboek \textit{Principia Philoso\-phiae} (uitgegeven bij Elzevier te Leiden, 1644).
-	Descartes was een rationalist, d.w.z. dat hij de fundamentele natuurwetten baseerde op helder en `onbetwijfelbare' idee\"en in zijn geest, of bijvoorbeeld in de afwezigheid van redenen om iets anders aan te nemen. (`Waarom zou God ons misleiden door ons verkeerde idee\"en te laten denken?'). Descartes gaat iets verder dan Galilei, bij hem is het beginsel een algemene natuurwet, die niet enkel beperkt is tot zware voorwerpen onder invloed van de zwaartekracht, maar die inherent is aan het verschijnsel beweging.
+	Descartes was een rationalist, d.w.z. dat hij de fundamentele natuurwetten baseerde op helder en `onbetwijfelbare' ideeën in zijn geest, of bijvoorbeeld in de afwezigheid van redenen om iets anders aan te nemen. (`Waarom zou God ons misleiden door ons verkeerde ideeën te laten denken?'). Descartes gaat iets verder dan Galilei, bij hem is het beginsel een algemene natuurwet, die niet enkel beperkt is tot zware voorwerpen onder invloed van de zwaartekracht, maar die inherent is aan het verschijnsel beweging.
 	%%%\newline
 	%%%\newline
 	
@@ -102,7 +102,7 @@
 	
 	}
 	
-	De vruchtbaarheid van het traagheidsbeginsel komt pas goed tot uiting in het werk van Christiaan Huygens (1629-1695). Voor Huygens is het beginsel een algemeen aanvaard axioma waaruit de relativiteit van inerti\"ele stelsels kan afgeleid worden. Huygens ziet hierin een middel om de wetten van elastische botsing af te leiden, wat rond het midden van de zeventiende eeuw een nog helemaal onopgelost probleem
+	De vruchtbaarheid van het traagheidsbeginsel komt pas goed tot uiting in het werk van Christiaan Huygens (1629-1695). Voor Huygens is het beginsel een algemeen aanvaard axioma waaruit de relativiteit van inertiële stelsels kan afgeleid worden. Huygens ziet hierin een middel om de wetten van elastische botsing af te leiden, wat rond het midden van de zeventiende eeuw een nog helemaal onopgelost probleem
 	was. Descartes had met zijn traagheidsbeginsel een aantal botsingswetten geformuleerd die echter duidelijk fout waren, o.a. omdat de verschillende regels bij grensgevallen niet in elkaar overgingen. Huygens werkte op dit probleem vermoedelijk al in 1656, maar publiceerde pas in 1669 een kort verslag van zijn resultaten in de \textit{Philosophical Transactions} -- zonder enig bewijs. Pas na zijn dood werd het hele traktaat in zijn postuum \textit{Opuscula varia} (Leiden, 1703) openbaar gemaakt. Het geldt nog steeds als \'e\'en der mooiste teksten van de vroege fysica. De volgende tekst is de aanvang van het traktaat.
 	%%%\newline
 	%%%\newline
@@ -164,11 +164,11 @@
     \begin{question}  Simplicio vertegenwoordigt in de tekst het standpunt van de scholastieke geleerden. Duid aan hoe Galilei hen portretteert.
 	\begin{oplossing}
 	%%%\newline
-	Galilei portretteert hen als geleerden die de voor die tijd gangbare wetenschappelijke idee\"en aanhangen. 
+	Galilei portretteert hen als geleerden die de voor die tijd gangbare wetenschappelijke ideeën aanhangen. 
 	%%%\newline
-	Een van die idee\"en is het bewijs van het niet-roteren van de aarde. Omdat een steen aan de voet van een toren neervalt kan de aarde niet bewegen. Moest de aarde bewegen, dan zou immers tijdens het vallen de aarde onder de steen zijn verschoven en zou de steen op enige afstand van de toren terecht moeten komen. Galilei laat Simplicio deze misvatting bevestigen aan het begin van de dialoog waardoor Simplicio dus een scholastieke geleerde vertolkt.
+	Een van die ideeën is het bewijs van het niet-roteren van de aarde. Omdat een steen aan de voet van een toren neervalt kan de aarde niet bewegen. Moest de aarde bewegen, dan zou immers tijdens het vallen de aarde onder de steen zijn verschoven en zou de steen op enige afstand van de toren terecht moeten komen. Galilei laat Simplicio deze misvatting bevestigen aan het begin van de dialoog waardoor Simplicio dus een scholastieke geleerde vertolkt.
 	%%%\newline
-	Ook het niet uitvoeren van experimenten als toetssteen van wetenschappelijke theorie\"en is eigen aan de tijdsgeest op dat moment. Het louter menselijk redeneren en de autoriteit van voorgangers wordt als nodig en voldoende beschouwd om een ware kijk op de werkelijkheid te kunnen hebben. Galilei laat bovenaan pagina 34 Simplicio dit idee beamen wanneer Salviati het beschrijft.
+	Ook het niet uitvoeren van experimenten als toetssteen van wetenschappelijke theorieën is eigen aan de tijdsgeest op dat moment. Het louter menselijk redeneren en de autoriteit van voorgangers wordt als nodig en voldoende beschouwd om een ware kijk op de werkelijkheid te kunnen hebben. Galilei laat bovenaan pagina 34 Simplicio dit idee beamen wanneer Salviati het beschrijft.
 	%%%\newline
 	Naast de twee hierboven genoemde misvattingen die de scholastieke geleerden volgens Galilei hebben, schetst hij hen wel als redelijke wezens. Zij beschikken over voldoende intellect om de eigenlijke waarheid wel te kennen. Anders zou hij immers niet via de socratische methode en dus ook het redeneren hen tot de juiste conclusie kunnen leiden. Aan het einde van de dialoog is het immers Simplicio die de juiste wetmatigheid (in de ogen van Galilei) geeft.
 	\end{oplossing}
@@ -177,7 +177,7 @@
     \begin{question}  Wat is de rol van het experiment bij Galilei?
 	\begin{oplossing}
 	%%%\newline
-	Het experiment moet volgens Galilei dienen als rechter om te bepalen welke wetmatigheden de eigenlijke zijn. Simplicio zegt immers bovenaan pagina 34 dat zonder het experiment de eigenlijke uitkomst niet zomaar zal kunnen worden gevonden. Dit idee over de manier waarop aan wetenschap moet worden gedaan, is revolutionair in de wetenschappelijke evolutie. V\'o\'or Galilei stelde men zich namelijk nadat men zich via bepaalde argumenten had laten overtuigen, geen verdere vragen over de waarheid van idee\"en. 
+	Het experiment moet volgens Galilei dienen als rechter om te bepalen welke wetmatigheden de eigenlijke zijn. Simplicio zegt immers bovenaan pagina 34 dat zonder het experiment de eigenlijke uitkomst niet zomaar zal kunnen worden gevonden. Dit idee over de manier waarop aan wetenschap moet worden gedaan, is revolutionair in de wetenschappelijke evolutie. V\'o\'or Galilei stelde men zich namelijk nadat men zich via bepaalde argumenten had laten overtuigen, geen verdere vragen over de waarheid van ideeën. 
 	\end{oplossing}
 	\end{question}
 	
