--- a/lambregs_ximera/glvn_golven_kenmerken.tex
+++ b/lambregs_ximera/glvn_golven_kenmerken.tex
@@ -10,7 +10,7 @@
 
 	%%%\section{Golven \& kenmerken}
 	
-	Golven kunnen we volgens hun kenmerken indelen in een paar categori\"en. Zo kunnen we een onderscheid maken tussen \emph{mechanische} en \emph{elektromagnetische} golven. Mechanische golven hebben een (elastisch\footnote{De vervorming in het medium kan zich maar voortzetten van zodra het lichaam te vervormen is en dus elastisch is. Er moeten immers krachten tussen de verschillende plaatsen van het medium aanwezig zijn.}) medium nodig om zich in te verplaatsen -- het is de storing in het medium die de golf vormt. Elektromagnetische golven daarentegen hebben geen medium nodig. Het zijn de elektrische en de magnetische veldenvectoren die golven.\footnote{Ook de recentelijk gemeten zwaartekrachtgolven moeten tot de categorie behoren van golven die geen medium nodig hebben. Het zijn rimpelingen van de ruimte-tijd zelf.}
+	Golven kunnen we volgens hun kenmerken indelen in een paar categoriën. Zo kunnen we een onderscheid maken tussen \emph{mechanische} en \emph{elektromagnetische} golven. Mechanische golven hebben een (elastisch\footnote{De vervorming in het medium kan zich maar voortzetten van zodra het lichaam te vervormen is en dus elastisch is. Er moeten immers krachten tussen de verschillende plaatsen van het medium aanwezig zijn.}) medium nodig om zich in te verplaatsen -- het is de storing in het medium die de golf vormt. Elektromagnetische golven daarentegen hebben geen medium nodig. Het zijn de elektrische en de magnetische veldenvectoren die golven.\footnote{Ook de recentelijk gemeten zwaartekrachtgolven moeten tot de categorie behoren van golven die geen medium nodig hebben. Het zijn rimpelingen van de ruimte-tijd zelf.}
 	\begin{image}
 	
 	\includegraphics[width=0.7\textwidth]{elasticiteit_medium}
@@ -19,7 +19,7 @@
 	
 	%%%\newline
 	%%%\newline
-	Golven kunnen \emph{transversaal} of \emph{longitudinaal} zijn. Bij een transversale golf gebeurt de beweging van de deeltjes van het medium loodrecht op de voortplantingsrichting van de golf. Zo krijg je transversale golven wanneer je het uiteinde van een touw heen en weer slingert. Ook licht is een transversale golf. Hier trilt dus niet het medium maar is het de ori\"entatie van de elektrische of magnetische veldvector die loodrecht staat op de voortplantingsrichting. Bij een longitudinale golf bewegen de deeltjes van het medium in de richting evenwijdig met de voortplantingsrichting. P-golven bij een aardbeving zijn hiervan een voorbeeld (i.t.t. S-golven, die zijn transversaal). Ook geluid bestaat uit een longitudinale golf. Zo plant geluid zich in de lucht voort doordat de luchtmoleculen tegen elkaar botsen. 
+	Golven kunnen \emph{transversaal} of \emph{longitudinaal} zijn. Bij een transversale golf gebeurt de beweging van de deeltjes van het medium loodrecht op de voortplantingsrichting van de golf. Zo krijg je transversale golven wanneer je het uiteinde van een touw heen en weer slingert. Ook licht is een transversale golf. Hier trilt dus niet het medium maar is het de oriëntatie van de elektrische of magnetische veldvector die loodrecht staat op de voortplantingsrichting. Bij een longitudinale golf bewegen de deeltjes van het medium in de richting evenwijdig met de voortplantingsrichting. P-golven bij een aardbeving zijn hiervan een voorbeeld (i.t.t. S-golven, die zijn transversaal). Ook geluid bestaat uit een longitudinale golf. Zo plant geluid zich in de lucht voort doordat de luchtmoleculen tegen elkaar botsen. 
 	Er zijn nog andere soorten golven zoals \emph{oppervlaktegolven}, \emph{tweedimensionale} en \emph{driedimensionale} golven. Deze zullen we hier met momenten kort behandelen.
 	\begin{image}
 	
