--- a/lambregs_ximera/nwtn_tweede_beginsel.tex
+++ b/lambregs_ximera/nwtn_tweede_beginsel.tex
@@ -27,7 +27,7 @@
 	%\end{array}\right\}
 	%\Rightarrow a\sim\frac{F}{m}
 	%\end{eqnarray*}
-	Aangezien we met het fundament van de mechanica te maken hebben, kunnen we de eenheid van kracht zodanig kiezen dat de evenredigheidsconstante simpelweg 1 is. We defini\"eren dus \'e\'en newton als de kracht die een massa van \'e\'en kilogram een versnelling van \'e\'en meter per seconde kwadraat geeft. Samen met de observatie dat de versnelling dezelfde richting en zin als de kracht heeft, krijgen we de tweede wet van Newton.
+	Aangezien we met het fundament van de mechanica te maken hebben, kunnen we de eenheid van kracht zodanig kiezen dat de evenredigheidsconstante simpelweg 1 is. We definiëren dus \'e\'en newton als de kracht die een massa van \'e\'en kilogram een versnelling van \'e\'en meter per seconde kwadraat geeft. Samen met de observatie dat de versnelling dezelfde richting en zin als de kracht heeft, krijgen we de tweede wet van Newton.
 	%%%\newline
 	\begin{definition}
 	{\textbf{De tweede wet van Newton}}
