--- a/lambregs_ximera/knmtc_1dim_begrippen.tex
+++ b/lambregs_ximera/knmtc_1dim_begrippen.tex
@@ -9,7 +9,17 @@
     \xmsource
 
 
-%%%\section{Enkele begrippen}
+\begin{remark}
+	Deze open-source cursus is in ontwikkeling. Leerkrachten en leerlingen die van dit materiaal gebruik maken kunnen eenvoudig fouten/verbetering/... melden. 
+
+	\begin{itemize}
+		\item Via de 'wijzig' knop kan je kleine fouten en typo's zelf aanpassen. \href{https://wiskunde.opmaat.org/website/inhoud/welkom/doe-mee}{stappenplan}
+		\item Mailen naar info@wiksunde.opmaat.org 
+		\item Via 
+	\end{itemize}
+\end{remark}
+
+
 \subsection{Positie en plaatsfunctie}
 
 De beweging van een puntmassa kan beschreven worden door de positie in functie van de tijd weer te geven. De \emph{plaatsfunctie} $x(t)$ geeft voor elk tijdstip \(t\) de positie \(x\) waar de puntmassa zich bevindt. Een coördinaatas\footnote{Een coördinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een oriëntatie.} bepaald de positie \(x\). De variabele \(t\) staat symbool voor de tijd. De notatie voor de positie op tijdstip $t_1$ is: 
